--- a/example.html
+++ b/example.html
@@ -39,13 +39,14 @@
 
           // AxonBridge.request() returns a jqXHR instance, which implements the
           // JavaScript Promise interface, so you can asynchronously handle responses as:
-          // success...
+          
+          // Success...
           console.log( "Status: " + textStatus );
           console.log( data );
 
           } ).fail( function ( jqXHR, textStatus, errorThrown ) {
 
-          // failure...
+          // Failure...
           console.log( "Status: " + textStatus );
           console.log( errorThrown );
 
