--- a/example.html
+++ b/example.html
@@ -4,7 +4,7 @@
     <title>AxonBridge Example</title>
   </head>
   <body>
-    <script src="lib/axon-bridge.js"></script>
+    <script src="lib/bridge-client.js"></script>
     <script type="text/javascript">
       
       // AxonBridge Initialization
