--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     
-    <title>Bridge Client Example</title>
+    <title>Bridge Testbed</title>
 
     <!-- Manually include jQuery, since it's huge and CDN-able. -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -19,7 +19,7 @@
   </head>
   <body>
 
-    <h1>Bridge Client Example</h1>
+    <h1>Bridge Testbed</h1>
 
     <fieldset>
       <h2><legend>Registration</legend></h2>
@@ -32,8 +32,17 @@
       <label for="last-name">Last Name: </label>
       <input id="last-name" type="text" />
       <label for="app-data">App Data: </label>
-      <textarea id="app-data" rows="6" cols="50">{}</textarea>
+      <textarea id="app-data" rows="2" cols="50">{}</textarea>
       <button id="register" type="button">Register</button>
+    </fieldset>
+
+    <fieldset>
+      <h2><legend>Verify Email</legend></h2>
+      <label for="email3">Email: </label>
+      <input id="email3" type="text" />
+      <label for="hash">Hash: </label>
+      <input id="hash" type="text" />
+      <button id="verify-email" type="button">Verify Email</button>
     </fieldset>
 
     <fieldset>
@@ -57,10 +66,27 @@
     </fieldset>
 
     <fieldset>
+      <h2><legend>Forgot Password</legend></h2>
+      <label for="email5">Email: </label>
+      <input id="email5" type="text" />
+      <button id="forgot-password" type="button">Request Password Recovery Email</button>
+    </fieldset>
+
+    <fieldset>
+      <h2><legend>Recover Password</legend></h2>
+      <label for="email4">Email: </label>
+      <input id="email4" type="text" />
+      <label for="new-password2">New Password: </label>
+      <input id="new-password2" type="password" />
+      <label for="hash2">Hash: </label>
+      <input id="hash2" type="text" />
+      <button id="recover-password" type="button">Recover Password</button>
+    </fieldset>
+
+    <fieldset>
       <h2><legend>Utilities</legend></h2>
       <button id="logout" type="button">Logout</button>
       <button id="clear-local-storage" type="button">Clear HTML5 Local Storage</button>
-      <button id="forgot-password" type="button">Request Password Recovery Email</button>
     </fieldset>
 
     <div id="notify">
