Further updates to resolve bugs with the changeover to sending the Bridge data in the header instead of the body of the request.

--- a/example/index.html
+++ b/example/index.html
@@ -71,7 +71,7 @@
       <h2><legend>Recover Password</legend></h2>
       <label for="hash2">Hash: </label>
       <input id="hash2" type="text" />
-      <label for="new-password2">New Password: </label>
+      <label for="new-password2">New Password (Hash): </label>
       <input id="new-password2" type="password" />
       <button id="recover-password" type="button">Recover Password</button>
     </fieldset>
