--- a/example/index.html
+++ b/example/index.html
@@ -64,19 +64,19 @@
 
     <fieldset>
       <h2><legend>Update User Profile</legend></h2>
-      <label for="update-user-profile-email">Email: </label>
-      <input id="update-user-profile-email" type="text" />
-      <label for="update-user-profile-old-password">Current Password: </label>
-      <input id="update-user-profile-old-password" type="password" />
-      <label for="update-user-profile-new-password">New Password: </label>
-      <input id="update-user-profile-new-password" type="password" />
-      <label for="update-user-profile-first-name">First Name: </label>
-      <input id="update-user-profile-first-name" type="text" />
-      <label for="update-user-profile-last-name">Last Name: </label>
-      <input id="update-user-profile-last-name" type="text" />
-      <label for="update-user-profile-app-data">App Data: </label>
-      <textarea id="update-user-profile-app-data" rows="2" cols="50">{}</textarea>
-      <button id="update-user-profile" type="button">Update User Profile</button>
+      <label for="save-user-email">Email: </label>
+      <input id="save-user-email" type="text" />
+      <label for="save-user-old-password">Current Password: </label>
+      <input id="save-user-old-password" type="password" />
+      <label for="save-user-new-password">New Password: </label>
+      <input id="save-user-new-password" type="password" />
+      <label for="save-user-first-name">First Name: </label>
+      <input id="save-user-first-name" type="text" />
+      <label for="save-user-last-name">Last Name: </label>
+      <input id="save-user-last-name" type="text" />
+      <label for="save-user-app-data">App Data: </label>
+      <textarea id="save-user-app-data" rows="2" cols="50">{}</textarea>
+      <button id="save-user" type="button">Update User Profile</button>
     </fieldset>
 
     <fieldset>
