--- a/example/index.html
+++ b/example/index.html
@@ -63,7 +63,7 @@
     </fieldset>
 
     <fieldset>
-      <h2><legend>Update User Profile</legend></h2>
+      <h2><legend>Save User</legend></h2>
       <label for="save-user-email">Email: </label>
       <input id="save-user-email" type="text" />
       <label for="save-user-old-password">Current Password: </label>
@@ -97,7 +97,7 @@
 
     <fieldset>
       <h2><legend>Utilities</legend></h2>
-      <button id="get-user-profile" type="button">Get User Profile</button>
+      <button id="load-user" type="button">Load User</button>
       <button id="logout" type="button">Logout</button>
     </fieldset>
 
