--- a/example/index.html
+++ b/example/index.html
@@ -98,6 +98,7 @@
     <fieldset>
       <h2><legend>Utilities</legend></h2>
       <button id="load-user" type="button">Load User</button>
+      <button id="is-authenticated" type="button">Is Authenticated</button>
       <button id="logout" type="button">Logout</button>
     </fieldset>
 
