Updated example to test the Bridge.resume() command.

--- a/example/index.html
+++ b/example/index.html
@@ -97,6 +97,7 @@
 
     <fieldset>
       <h2><legend>Utilities</legend></h2>
+      <button id="resume" type="button">Resume</button>
       <button id="load-user" type="button">Load User</button>
       <button id="is-authenticated" type="button">Is Authenticated</button>
       <button id="logout" type="button">Logout</button>
